# aequorOS

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE.md  AequorOS - Product Documentation.docx  AequorOS_MVP_Build_Specification.docx  CODEBASE_CONVENTIONS.md  CONTRIBUTING.md  IMPLEMENTATION_APPROACH.md  LICENSE  MVP_BUILD_HANDOFF.md  README.md  SECURITY.md  data_engine.md  docker-compose.dashboard.yml  frontend.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  storage.md
apps/cashflow-ml/: .gitignore  mise.toml  pyproject.toml
apps/cashflow-ml/app/: __init__.py  baseline.py  config.py  features.py  main.py  schemas.py  service.py
apps/cashflow-ml/tests/: test_baseline.py
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  mise.toml  openapi-schema.json  pyproject.toml
backend/alembic/versions/: 202607120001_financial_covenants.py  202607160001_data_engine_canonical_spine.py  202607160002_forecast_runs.py  202607170001_irr_fx_ftp_foundation.py  202607170002_canonical_reference_rows.py  202607170003_hedge_swap_position_types.py  202607170004_api_push_source_system.py  202607170005_job_queue_live_engine.py  202607170006_market_data_entities.py  202607170007_temenos_connections.py  202607170008_canonical_positions_blotter_indexes.py  202607170009_regulatory_reporting.py  202607170010_database_direct_connections.py  202607180011_snowflake_backend.py  202607180012_mapping_config_source_ref.py  202607180013_user_auth_fields.py  202607180014_jobs_force_rls.py  202607200015_sso_connections.py  202607200016_sso_jit_enabled.py  202607210017_user_profile_fields.py  202607230017_jurisdictions_registry.py
backend/app/: main.py  worker.py
backend/app/adapters/: __init__.py
backend/app/api/: deps.py  health.py  router.py
backend/app/core/: config.py  ids.py  security.py
backend/app/db/: base.py  session.py
backend/app/etl/: README.md  __init__.py  contracts.py  model_loading.py  pipeline.py  resolve.py
backend/app/features/: ingest_data.py  manage_live_engine.py  manage_market_data_connections.py  manage_market_data_uploads.py  manage_regulatory_reporting.py  manage_scenarios.py  manage_temenos_connections.py  push_data.py  read_behavioral_models.py  read_market_data_views.py  review_liquidity.py  run_calculations.py  run_regulatory_irr.py
backend/app/ml/: __init__.py  baseline.py  cashflow_history.py  config.py  model.py  real_series.py  synthetic.py
backend/app/models/: __init__.py  canonical.py  database_connection.py  financial.py  ingestion.py  jurisdiction.py  live.py  market_data.py  regulatory.py  regulatory_reporting.py  risk.py  sso_connection.py  temenos.py  user.py
backend/app/schemas/: assessments.py  auth.py  banks.py  behavioral_models.py  cashflow_forecast.py  data_activation.py  database_connection.py  health.py  ingestion.py  jobs.py  live.py  market_data_connections.py  market_data_upload.py  market_data_views.py  push.py  regulatory_capital.py  regulatory_ftp.py  regulatory_fx.py  regulatory_irr.py  regulatory_liquidity.py  regulatory_reporting.py  temenos_connections.py
backend/app/services/: alerts.py  authentication.py  banks.py  behavioral_models.py  capital.py  case_types.py  cashflow_forecast.py  data_activation.py  database_connections.py  etl_dedup_jobs.py  fact_derivation.py  (+27 more)
backend/cashflow-ml/: README.md
backend/dashboard/: .env.example  Dockerfile  README.md  auth.ts  middleware.ts  next.config.js  package.json  tailwind.config.ts
backend/risk-service/: AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/scripts/: create_user.py  export_openapi_schema.py  fix-api-client-package.py  load_bank_history.py  prepare_openapi_client_schema.py  push_api_example.py  reset_uploaded_data.py  seed_sample_bank.py
backend/tests/: conftest.py  test_config.py  test_health.py
(+1185 files in other folders)
