[project]
name = "risk-service"
version = "0.1.0"
description = "FastAPI backend foundation for the AequorOS financial risk MVP."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic",
  "boto3",
  "fastapi[standard]",
  "loguru",
  "numpy",
  "openpyxl",
  "psycopg[binary]",
  "pydantic-settings",
  "sqlalchemy",
  "torch",
]

[dependency-groups]
dev = [
  "basedpyright",
  "httpx",
  "openapi-generator-cli[jdk4py]~=7.13.0",
  "pre-commit==4.6.0",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["app", "tests", "alembic"]
exclude = [".venv"]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
