[project]
name = "risk-service"
version = "0.1.0"
description = "FastAPI backend foundation for the AequorOS financial risk MVP."
readme = "README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic",
  "boto3",
  "cryptography",
  "fastapi[standard]",
  "jellyfish",
  "loguru",
  "metaphone",
  "numpy",
  "openpyxl",
  "oracledb",
  "pandas",
  "psycopg[binary]",
  "pyarrow",
  "pydantic-settings",
  "pyyaml",
  "rapidfuzz",
  "reportlab",
  "scikit-learn",
  "sqlalchemy",
  "torch",
]

# Driver-heavy database-direct backends. Lazily imported by
# app/adapters/database_direct, so the default environment stays installable and
# fixture tests run without them. Install when wiring a live source database:
#   uv sync --extra db-direct
[project.optional-dependencies]
db-direct = [
  "pyodbc",     # ODBC + SQL Server (needs unixODBC / a system ODBC driver)
  "jaydebeapi", # generic JDBC via a bank-supplied JDBC driver jar
  "JPype1",     # JVM bridge for jaydebeapi
  "snowflake-connector-python", # Snowflake warehouse (key-pair auth, Streams CDC)
  "cryptography",               # loads the RSA private key for Snowflake key-pair auth
]

[dependency-groups]
dev = [
  "basedpyright",
  "httpx",
  "openapi-generator-cli[jdk4py]~=7.13.0",
  "pre-commit==4.6.0",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["app", "tests", "alembic"]
exclude = [".venv"]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
